-------------------------------------------------------------------------- - Major enhancements to the tool SQL Window --------------------------------------------------------------------------   Most enhancements are for the stand alone version. (sqlw.bat or sqlw.sh)   Try it out and send me feedback and suggestions   Enhancements:   * Connect to "any" JDBC driver (the driver must be in the CLASSPATH, at least for the moment, work in progress for this)   * Save (SQL/RCL) text content to a file. Save As. Load a file. Last Used files... (see the File Menu)   * Can now connect to Replication Server   * Syntax highlighting for RCL - Replication Command Language   * Basic Code Completion for Replication Server Commands and Connection names   * View Current ASE Configuration has been added, if you are connected to ASE.   * View Current RepServer Configuration has been added, if you are connected to RS.   * RS: Resume/Suspend RepAgent/DSI dialog. (right click in the JTable and do 'resume')   * RS: View Stable Queue Content.     (Menu->View->View Stable Queue Content)     (right click in the JTable and do 'view Queue Content')     NOTE: this is't 100% complete yet, need more work done   * Row Count option (see row count for ins/upd/del) and not just the selects.     stored procedures like 'sp_who' will add many row counts. use URL Option IGNORE_DONE_IN_PROC=true     in the Connection Dialog to minimize additional row count entries from stored procs.   * ASE: check @@trancount and @@transtate after each executed SQL Statement. a WARNING "watermark"     will be visible if you are in a transaction. (try it: simply execute begin tran, then commit/rollback tran.     to reset status 'TRAN ABORT', execute begin tran commit tran)   * Predefined SQL/RCL commands, clock the RCL/SQL Button on the Toolbar and kick it off.   * RS: Admin who_is_down button on the Toolbar.   * Watermark in the RCL/SQL text editor, that tells you if you are connected or not...   * Status bar at the bottom